sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: not found: type int
  var i : int = 0;
          ^AlgBubbleSort1:5: error: not found: type int
  var j : int;
          ^AlgBubbleSort1:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var j : int;
      ^AlgBubbleSort1:5: error: local variables must be initialized
  var j : int;
      ^AlgBubbleSort1:12: error: value += is not a member of Int
      i+=1;
       ^AlgBubbleSort1:13: error: value += is not a member of Int
      j+=1;
       ^